[gd_scene load_steps=50 format=3 uid="uid://h80qus7h807b"]

[ext_resource type="Script" path="res://Enemies/virus_3.gd" id="1_fg8f3"]
[ext_resource type="Texture2D" uid="uid://cxokhjoxdbk4" path="res://Character/Enemies/virusslime/slime start.PNG" id="2_1vtoo"]
[ext_resource type="Texture2D" uid="uid://cx3trcmkpg3q0" path="res://Character/Enemies/virusslime/slime mid air.PNG" id="3_uyxqn"]
[ext_resource type="Texture2D" uid="uid://bre270idjtooq" path="res://Character/Enemies/virusslime/slime end.PNG" id="4_aivcp"]
[ext_resource type="Texture2D" uid="uid://dqupdb077gtdv" path="res://Character/Enemies/virusslime/slimeidle sheet.png" id="5_ymgrf"]
[ext_resource type="Texture2D" uid="uid://ghmb7fkpwg82" path="res://UI/health_bar/healthbarUnder.png" id="6_hy1rg"]
[ext_resource type="Texture2D" uid="uid://6l2w4im6ayjt" path="res://UI/health_bar/healthbarProgress.png" id="7_0acwr"]
[ext_resource type="Script" path="res://Character/Enemies/virusslime/Virus3_HealthBar.gd" id="8_qib6k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yi5od"]
atlas = ExtResource("2_1vtoo")
region = Rect2(0, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeu7d"]
atlas = ExtResource("2_1vtoo")
region = Rect2(120, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcd4x"]
atlas = ExtResource("2_1vtoo")
region = Rect2(240, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm70g"]
atlas = ExtResource("2_1vtoo")
region = Rect2(360, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5vty"]
atlas = ExtResource("2_1vtoo")
region = Rect2(480, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbwio"]
atlas = ExtResource("2_1vtoo")
region = Rect2(600, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_etmdl"]
atlas = ExtResource("3_uyxqn")
region = Rect2(0, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieou6"]
atlas = ExtResource("3_uyxqn")
region = Rect2(120, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt7kr"]
atlas = ExtResource("3_uyxqn")
region = Rect2(240, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_plsyw"]
atlas = ExtResource("3_uyxqn")
region = Rect2(360, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5808h"]
atlas = ExtResource("3_uyxqn")
region = Rect2(480, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u7yx"]
atlas = ExtResource("3_uyxqn")
region = Rect2(600, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl1ji"]
atlas = ExtResource("3_uyxqn")
region = Rect2(720, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_umtjy"]
atlas = ExtResource("4_aivcp")
region = Rect2(0, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aeap"]
atlas = ExtResource("4_aivcp")
region = Rect2(120, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_680rn"]
atlas = ExtResource("4_aivcp")
region = Rect2(240, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xwqn"]
atlas = ExtResource("4_aivcp")
region = Rect2(360, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_astd3"]
atlas = ExtResource("4_aivcp")
region = Rect2(480, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tdbu"]
atlas = ExtResource("4_aivcp")
region = Rect2(600, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ldq"]
atlas = ExtResource("4_aivcp")
region = Rect2(720, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n7ss"]
atlas = ExtResource("4_aivcp")
region = Rect2(840, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_68stn"]
atlas = ExtResource("4_aivcp")
region = Rect2(960, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwo3l"]
atlas = ExtResource("4_aivcp")
region = Rect2(1080, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg625"]
atlas = ExtResource("4_aivcp")
region = Rect2(1200, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pntd5"]
atlas = ExtResource("4_aivcp")
region = Rect2(1320, 0, 120, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw3l7"]
atlas = ExtResource("5_ymgrf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh0v2"]
atlas = ExtResource("5_ymgrf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7k0r"]
atlas = ExtResource("5_ymgrf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie0kf"]
atlas = ExtResource("5_ymgrf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctu87"]
atlas = ExtResource("5_ymgrf")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_13tep"]
atlas = ExtResource("5_ymgrf")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvso1"]
atlas = ExtResource("5_ymgrf")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_phxc4"]
atlas = ExtResource("5_ymgrf")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6iuij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi5od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeu7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcd4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm70g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5vty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbwio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etmdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieou6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt7kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plsyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5808h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u7yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl1ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umtjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aeap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_680rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xwqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_astd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tdbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ldq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n7ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68stn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwo3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg625")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pntd5")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw3l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh0v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7k0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie0kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctu87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13tep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvso1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phxc4")
}],
"loop": false,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_sm3u6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dyxkw"]
resource_name = "attack"
length = 2.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_mokpf"]
resource_name = "idle"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nmpl"]
_data = {
"RESET": SubResource("Animation_sm3u6"),
"attack": SubResource("Animation_dyxkw"),
"idle": SubResource("Animation_mokpf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfi3g"]
size = Vector2(17.973, 6.02414)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_254vk"]
radius = 8.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4otu1"]
radius = 0.338169
height = 0.676341

[node name="virus_3_slime" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_fg8f3")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(228, -88)
sprite_frames = SubResource("SpriteFrames_6iuij")
animation = &"idle"
offset = Vector2(-196, 21)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3nmpl")
}
autoplay = "idle"

[node name="detection_area" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(3.8147e-06, -45)
rotation = -3.14159
scale = Vector2(15.2451, -14.2759)
shape = SubResource("RectangleShape2D_vfi3g")
debug_color = Color(0.278431, 0.631373, 0, 0.419608)

[node name="TextureProgressBar" type="TextureProgressBar" parent="." node_paths=PackedStringArray("virus3")]
offset_left = 1.0
offset_top = -88.0
offset_right = 67.0
offset_bottom = -76.0
step = 0.1
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("6_hy1rg")
texture_progress = ExtResource("7_0acwr")
script = ExtResource("8_qib6k")
virus3 = NodePath("..")

[node name="capture_area" type="Area2D" parent="." groups=["slime"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="capture_area" groups=["slime"]]
position = Vector2(0, -33)
shape = SubResource("CapsuleShape2D_254vk")
debug_color = Color(0.945098, 0.235294, 0, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(-2.30846, -2.9571)
shape = SubResource("CapsuleShape2D_4otu1")

[node name="death_timer" type="Timer" parent="."]

[connection signal="healthChanged" from="." to="TextureProgressBar" method="_on_virus_3_slime_health_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="capture_area" to="." method="_on_capture_area_body_entered"]
[connection signal="body_exited" from="capture_area" to="." method="_on_capture_area_body_exited"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
